canary-istio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo-stable
  namespace: canary-lab
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: rollouts-demo
---
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo-canary
  namespace: canary-lab
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: rollouts-demo
